# udacity--agentic-ai

./: .gitignore  pyproject.toml  run.sh
01-prompting-for-effective-reasoning-and-planning/: 01-introduction-to-prompting-for-llm-reasoning-and-planning.ipynb  02-lesson-1-role-based-prompting.ipynb  03-lesson-2-chain-of-thought-and-react-prompting-part-i.ipynb  04-lesson-2-chain-of-thought-and-react-prompting-part-ii.ipynb  05-lesson-3-prompt-instruction-refinement.ipynb  06-lesson-4-chaining-prompts-for-agentic-reasoning.ipynb  07-lesson-5-implementing-llm-feedback-loops.ipynb
01-prompting-for-effective-reasoning-and-planning/02-role-of-prompting/: introduction-to-prompting-for-llm-reasoning-and-planning.ipynb
01-prompting-for-effective-reasoning-and-planning/project/: project_starter.ipynb
02-introduction-to-agentic-workflows/lesson-1-Introduction_to_Agentic_Workflows/: lesson1.ipynb
02-introduction-to-agentic-workflows/lesson-10-Lesson_Overview/: all_mermaid_diagrams.html  mermaid_gen.ipynb
02-introduction-to-agentic-workflows/lesson-2-Understanding_Agentic_Workflows/: lesson2_demo.ipynb
02-introduction-to-agentic-workflows/lesson-3-Agentic_Workflow_Modeling/: exercise_diagrams.html
02-introduction-to-agentic-workflows/lesson-4-Agentic_Workflow_Implementation/: lesson4.ipynb
02-introduction-to-agentic-workflows/lesson-5-Agentic_Workflow_Patterns_Prompt_Chaining/: lesson5.ipynb
02-introduction-to-agentic-workflows/lesson-6-Agentic_Workflow_Patterns_Routing/: lesson6.ipynb
02-introduction-to-agentic-workflows/lesson-7-Agentic_Workflow_Patterns_Parallelization/: lesson7.ipynb
02-introduction-to-agentic-workflows/lesson-8-Agentic_Workflow_Patterns_Evaluator-Optimizer/: lesson8.ipynb
02-introduction-to-agentic-workflows/lesson-9-Agentic_Workflow_Orchestrator-Workers/: lesson9.ipynb
03-building-agents/lib/: agents.py  (+6 more)
04-multiagent-systems/project/: README.md  RUBRIC.md  evaluator.py  feedback.md  munder_difflin.db  project.py  pyproject.toml  test_results.csv
04-multiagent-systems/project/agents/: __init__.py  customer_advisor.py  inventory.py  orchestrator.py  ordering.py  quotes.py
04-multiagent-systems/project/data/: __init__.py  constants.py  database_service.py  helpers.py
04-multiagent-systems/project/evaluator/: __init__.py  common.py  customer_insights.py  inventory.py  orchestrator.py  ordering.py  quotes.py
04-multiagent-systems/project/utils/: __init__.py  terminal_animation.py  text.py
(+165 files in other folders)
