[tool.poetry]
name = "udacity-agentic-ai"
version = "0.1.0"
description = "Project with everything related to the Agentic AI nanodegree"
authors = ["claudiordgz <claudio.rdgz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "1.78.1"
pandas = "2.3.0"
scikit-learn = "^1.7.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
json-repair = "0.47.1"
numexpr = "2.11.0"
pydantic = "2.11.7"
python-dotenv = "1.1.0"
tavily-python = "^0.7.12"
sqlalchemy = "^2.0.44"
chromadb = "^1.1.1"
pdfplumber = "^0.11.7"
tiktoken = "^0.12.0"
networkx = "^3.5"
smolagents = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
